# spacetraders-api

./: Cargo.toml  LICENSE  generate.sh
src/apis/: agents_api.rs  configuration.rs  contracts_api.rs  default_api.rs  factions_api.rs  fleet_api.rs  systems_api.rs
src/models/: accept_contract_200_response.rs  accept_contract_200_response_data.rs  activity_level.rs  agent.rs  chart.rs  construction.rs  construction_material.rs  contract.rs  contract_deliver_good.rs  contract_payment.rs  contract_terms.rs  cooldown.rs  create_chart_201_response.rs  create_chart_201_response_data.rs  create_ship_ship_scan_201_response.rs  create_ship_ship_scan_201_response_data.rs  create_ship_system_scan_201_response.rs  create_ship_system_scan_201_response_data.rs  create_ship_waypoint_scan_201_response.rs  create_ship_waypoint_scan_201_response_data.rs  create_survey_201_response.rs  create_survey_201_response_data.rs  deliver_contract_200_response.rs  deliver_contract_200_response_data.rs  deliver_contract_request.rs  dock_ship_200_response.rs  extract_resources_201_response.rs  extract_resources_201_response_data.rs  extract_resources_201_response_data_events_inner.rs  extract_resources_request.rs  extraction.rs  extraction_yield.rs  faction.rs  faction_symbol.rs  faction_trait.rs  faction_trait_symbol.rs  fulfill_contract_200_response.rs  get_agents_200_response.rs  get_construction_200_response.rs  get_contract_200_response.rs  (+141 more)
